--- a/modal.html
+++ b/modal.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <script src="modal.js"></script>
+  <!-- <script src="modal.js"></script> -->
+  <script src="signup.js"></script>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -24,12 +25,12 @@
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#" data-filter="home">Home</a></li>
+              <li class="active"><a class="ank" href="#" data-filter="home">Home</a></li>
               
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#" data-toggle="modal" data-target="#signup_model"><span class="glyphicon glyphicon-user" data-filter="register"></span> Sign Up</a></li>
-              <li><a href="#" data-toggle="modal" data-target="#login_model"><span class="glyphicon glyphicon-log-in" data-filter="login"></span> Login</a></li>
+              <li><a href="#" class="ank" data-toggle="modal" data-target="#signup_model"><span class="glyphicon glyphicon-user" data-filter="register"></span> Sign Up</a></li>
+              <li><a href="#" class="ank" data-toggle="modal" data-target="#login_model"><span class="glyphicon glyphicon-log-in" data-filter="login"></span> Login</a></li>
             </ul>
           </div>
         </div>
